--- a/preamble.tex
+++ b/preamble.tex
@@ -40,6 +40,7 @@
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 
+\usetikzlibrary{decorations.markings,backgrounds}
 \colorlet{blx}{blue!40!black!80}
 \colorlet{grx}{green!40!black!70}
 \colorlet{rex}{red!40!black!70}
