Oxidative Addition / Reductive Elimination

--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -640,12 +640,12 @@
     \begin{itemize}
         \item They notably differ when \ce{M-M} bonds and Z-type ligands are in play.
     \end{itemize}
-    \item Consider the structure formed by two dimerized fic (is this the right spelling? Does it have a charge by itself?) fragments (a fic fragment is \ce{CpFe(CO)2}).
+    \item Consider the structure formed by two dimerized \ce{Fp-} (is this the right spelling? Does it have a charge by itself?) fragments (a \ce{Fp-} fragment is \ce{CpFe(CO)2-}).
     \begin{figure}[h!]
         \centering
         \chemfig{Fe?(-[3]Cp)(-[5]OC)-[1]C(=[2]O)-[7]Fe?(-[1]CO)(-[7]Cp)-[5]C?(=[6]O)}
-        \caption{Two dimerized fic fragments.}
-        \label{fig:ficFragments}
+        \caption{Two dimerized \ce{Fp-} fragments.}
+        \label{fig:FpFragments}
     \end{figure}
     \begin{itemize}
         \item The oxidation state of each iron is \ce{Fe^I} (since \ce{Cp} is the only electronegative ligand).
@@ -951,7 +951,7 @@
     \end{itemize}
     \item \ce{M-M} bonds and oxidation states?
     \begin{itemize}
-        \item Reviews the discussion surrounding Figure \ref{fig:ficFragments}.
+        \item Reviews the discussion surrounding Figure \ref{fig:FpFragments}.
     \end{itemize}
     \item The binding of a Z-type ligand does not affect the electron count of a compound at all.
     \item The formal charges on the molecules in the PSet are the charges of the molecules as a whole, not any one part.
@@ -980,7 +980,7 @@
     \end{itemize}
     \item What does isolobal mean?
     \item The fic fragment: Right spelling/charge?
-    \item Does the iron in Figure \ref{fig:ficFragments} have tetrahedral or square planar geometry and why?
+    \item Does the iron in Figure \ref{fig:FpFragments} have tetrahedral or square planar geometry and why?
     \item Copies Table VI.2 from \textcite{bib:CHEM20100Notes}. Some differences?
     \item Why these specific spins to higher and lower energy (Figure \ref{fig:zeemanSplitting-1e})? Or is it arbitrary?
     \item What is a Boltzmann population?
