--- a/main.bib
+++ b/main.bib
@@ -43,3 +43,36 @@
     year = {1995},
     doi = {10.1016/0022-328X(95)00508-N}
 }
+
+@article{bib:HalpernVaska,
+    author = {Pwen Boon Chock and Jack Halpern},
+    title = {Kinetics of the Addition of Hydrogen, Oxygen, and Methyl Iodide to Some Square-Planar Iridium({I}) Complexes},
+    journal = {Journal of the American Chemical Society},
+    volume = {88},
+    number = {15},
+    pages = {3511-3514},
+    year = {1966},
+    doi = {10.1021/ja00967a009}
+}
+
+@article{bib:HalpernBimolecularOxAdn,
+    author = {Jack Halpern and John P Maher},
+    title = {Kinetics of the Reactions of Pentacyanocobaltate({II}) with Organic Halides},
+    journal = {Journal of the American Chemical Society},
+    volume = {87},
+    number = {23},
+    pages = {5361-5366},
+    year = {1965},
+    doi = {10.1021/ja00951a018}
+}
+
+@article{bib:WhitesidesHDFpInversion,
+    author = {Paul L Bock and David J Boschetto and James R Rasmussen and James P Demers and George M Whitesides},
+    title = {Stereochemistry of Reactions and Carbon-Transition Metal $\sigma$ Bonds},
+    journal = {Journal of the American Chemical Society},
+    volume = {96},
+    number = {9},
+    pages = {2814-2825},
+    year = {1974},
+    doi = {10.1021/ja00816a025}
+}
