--- a/preamble.tex
+++ b/preamble.tex
@@ -42,6 +42,7 @@
 
 \usetikzlibrary{decorations.markings,backgrounds}
 \colorlet{blx}{blue!40!black!80}
+\colorlet{blz}{blue!40!black!20}
 \colorlet{grx}{green!40!black!70}
 \colorlet{rex}{red!40!black!70}
 
